tests/specs/ecosystem/vxern/dexonline_scraper/0_1_2.test
vxern/dexonline-scraper/0.1.2
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --

error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { DictionaryFlags, MatchingModes, Synthesis, Inflection, Links };
                          ~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:36:27

